--- a/iMatMini/src/imatmini/productDescription.fxml
+++ b/iMatMini/src/imatmini/productDescription.fxml
@@ -21,13 +21,27 @@
                <children>
                   <AnchorPane layoutX="19.0" layoutY="104.0" onMouseClicked="#mouseTrap" prefHeight="456.0" prefWidth="749.0" style="-fx-background-color: -fx-background;" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
                      <children>
+                        <AnchorPane layoutX="1.0" layoutY="327.0" prefHeight="213.0" prefWidth="749.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                           <children>
+                              <TextArea fx:id="produktbeskrivning" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="11.0" layoutY="337.0" prefHeight="213.0" prefWidth="749.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                           <children>
+                              <TextArea fx:id="innerhållsföreckning" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="11.0" layoutY="337.0" prefHeight="213.0" prefWidth="749.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                           <children>
+                              <TextArea fx:id="övrig_information" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                           </children>
+                        </AnchorPane>
                         <ImageView fx:id="detailImage" fitHeight="270.0" fitWidth="340.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                        <Label fx:id="titleLabel" layoutX="340.0" layoutY="9.0" prefHeight="53.0" prefWidth="350.0" text="Title" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
+                        <Label fx:id="titleLabel" layoutX="340.0" layoutY="9.0" prefHeight="53.0" prefWidth="293.0" text="Title" AnchorPane.rightAnchor="57.0" AnchorPane.topAnchor="10.0">
                            <font>
                               <Font name="Arial" size="36.0" />
                            </font>
                         </Label>
-                        <TextArea fx:id="textAreaInstruction" editable="false" layoutX="7.0" layoutY="327.0" prefHeight="213.0" prefWidth="700.0" styleClass="text-area" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
                         <ToggleButtonGroup layoutX="43.0" layoutY="275.0" selectionType="SINGLE" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                            <toggles>
                               <ToggleButton fx:id="Produktbeskrivning" mnemonicParsing="false" prefHeight="52.0" prefWidth="234.0" text="Produktbeskrivning">
@@ -81,6 +95,23 @@
                               <Font name="Arial" size="25.0" />
                            </font>
                         </Label>
+                        <ImageView fx:id="star_unmarked" fitHeight="50.0" fitWidth="50.0" layoutX="287.0" layoutY="222.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@resources/star_unmarked.jpg" />
+                           </image>
+                        </ImageView>
+                        <Separator layoutX="50.0" layoutY="370.0" prefWidth="600.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="52.0" />
+                        <Separator layoutX="50.0" layoutY="500.0" prefWidth="600.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="52.0" />
+                        <Label layoutX="205.0" layoutY="330.0" prefHeight="36.0" prefWidth="302.0" text="Relaterade Produkter" AnchorPane.bottomAnchor="174.0">
+                           <font>
+                              <Font name="Arial" size="30.0" />
+                           </font>
+                        </Label>
+                        <ImageView fx:id="closeImageView" fitHeight="35.0" fitWidth="35.0" layoutX="659.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+                           <image>
+                              <Image url="@resources/icon_close.png" />
+                           </image>
+                        </ImageView>
                      </children>
                      <opaqueInsets>
                         <Insets />
