--- a/iMatMini/src/imatmini/acount.fxml
+++ b/iMatMini/src/imatmini/acount.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
@@ -14,24 +16,60 @@
                 <AnchorPane fx:id="productDescriptionPanel" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: rgba(0, 0, 0, 0.75);">
                     <children>
                         <AnchorPane layoutX="19.0" layoutY="104.0" onMouseClicked="#mouseTrap" prefHeight="456.0" prefWidth="749.0" style="-fx-background-color: -fx-background;" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
-                            <children>
-                                <Button fx:id="LäggTillButton" layoutX="469.0" layoutY="225.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="101.0" style="-fx-background-color: #7FFF00;" text="Lägg till">
-                                    <font>
-                                        <Font size="20.0" />
-                                    </font>
-                                </Button>
-                        <BorderPane layoutX="69.0" layoutY="144.0" prefHeight="326.0" prefWidth="369.0">
-                           <top>
-                              <AnchorPane prefHeight="39.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-                           </top>
-                           <left>
-                              <AnchorPane prefHeight="161.0" prefWidth="42.0" BorderPane.alignment="CENTER" />
-                           </left>
-                        </BorderPane>
-                            </children>
                             <opaqueInsets>
                                 <Insets />
                             </opaqueInsets>
+                     <children>
+                        <SplitPane dividerPositions="0.23565965583174" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                          <items>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                 <children>
+                                    <ScrollPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                       <content>
+                                          <FlowPane prefHeight="532.0" prefWidth="540.0">
+                                             <children>
+                                                <TitledPane animated="false" prefHeight="106.0" prefWidth="520.0" text="Kontouppgifter">
+                                                  <content>
+                                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="107.0" prefWidth="518.0" />
+                                                  </content>
+                                                   <font>
+                                                      <Font name="Arial" size="18.0" />
+                                                   </font>
+                                                </TitledPane>
+                                                <TitledPane animated="false" prefHeight="140.0" prefWidth="520.0" text="untitled">
+                                                   <content>
+                                                      <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="700.0" />
+                                                   </content>
+                                                   <font>
+                                                      <Font name="Arial" size="18.0" />
+                                                   </font>
+                                                </TitledPane>
+                                                <TitledPane animated="false" prefHeight="175.0" prefWidth="520.0" text="Adress">
+                                                   <content>
+                                                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="141.0" prefWidth="482.0" />
+                                                   </content>
+                                                   <font>
+                                                      <Font name="Arial" size="18.0" />
+                                                   </font>
+                                                </TitledPane>
+                                                <TitledPane animated="false" prefHeight="108.0" prefWidth="520.0" text="Betalningsuppgifter">
+                                                   <content>
+                                                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="59.0" prefWidth="518.0" />
+                                                   </content>
+                                                   <font>
+                                                      <Font name="Arial" size="18.0" />
+                                                   </font>
+                                                </TitledPane>
+                                             </children>
+                                          </FlowPane>
+                                       </content>
+                                    </ScrollPane>
+                                 </children>
+                              </AnchorPane>
+                          </items>
+                        </SplitPane>
+                     </children>
                         </AnchorPane>
                     </children>
                 </AnchorPane>
