--- a/iMatMini/src/iMat/header.css
+++ b/iMatMini/src/iMat/header.css
@@ -2,34 +2,50 @@
     -fx-font-size: 15px;
     -fx-font-family: "Avenir Book";
     -fx-font-weight: bold;
+    -fx-text-fill: #ffffff;
 }
-
 .set-background-color {
-    -fx-background-color: #ec8282;
+    -fx-background-color: #1A6763;
 }
 
-.border-cart {
-    -fx-background-color: #ADD8E6;
+.text-logo {
+    -fx-font-size: 40px;
+    -fx-font-family: "Helvetica";
+    -fx-font-weight: bold;
+    -fx-text-fill: #ffffff;
+}
+
+.border-logo {
+    -fx-border-color: #6D9871;
+    -fx-border-width: 3px;
+}
+
+.text-border {
+    -fx-background-color: #000000;
     -fx-border-width: 5px;
     -fx-border-radius: 10 10 10 10;
     -fx-background-radius: 10 10 10 10;
 }
 
+.menu-item .label {
+    -fx-text-fill: white;
+}
 
-.border-loggedIn {
-    -fx-background-color: #90EE90;
+.menu-item {
+    -fx-background-color: #000000;
     -fx-border-width: 5px;
     -fx-border-radius: 10 10 10 10;
     -fx-background-radius: 10 10 10 10;
+
 }
 
-.border-loggedOut {
-    -fx-background-color: #ffcccb;
+.menu-item:hover {
+     -fx-background-color: #006400;
+}
+
+.context-menu {
+    -fx-background-color: #000000;
     -fx-border-width: 5px;
     -fx-border-radius: 10 10 10 10;
     -fx-background-radius: 10 10 10 10;
-}
-
-.set-border-bottom {
-    -fx-border-bottom-width: 5px;
 }
