--- a/iMatMini/src/iMat/header.fxml
+++ b/iMatMini/src/iMat/header.fxml
@@ -1,36 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="123.0" prefWidth="1095.0" styleClass="set-background-color" stylesheets="@header.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="126.0" prefWidth="1095.0" stylesheets="@header.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="114.0" fitWidth="202.0" layoutX="14.0" layoutY="4.0" pickOnBounds="true">
-         <image>
-            <Image url="@resources/iMat_logo.png" />
-         </image>
-      </ImageView>
-      <TextField layoutX="276.0" layoutY="47.0" prefHeight="25.0" prefWidth="351.0" promptText="Sök produkt">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </TextField>
       <AnchorPane fx:id="cartAnchorPane" layoutX="951.0" layoutY="2.0" prefHeight="120.0" prefWidth="130.0" AnchorPane.leftAnchor="951.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="2.0">
          <children>
             <Label alignment="CENTER" layoutX="8.0" layoutY="82.0" prefHeight="31.0" prefWidth="110.0" text="Varukorg">
                <styleClass>
                   <String fx:value="text-icon" />
-                  <String fx:value="border-cart" />
+                  <String fx:value="text-border" />
                </styleClass>
             </Label>
             <ImageView fitHeight="45.0" fitWidth="60.0" layoutX="31.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
@@ -40,14 +26,13 @@
             </ImageView>
          </children>
       </AnchorPane>
-      <Button layoutX="636.0" layoutY="46.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="84.0" text="Sök" />
       <StackPane layoutX="791.0" layoutY="1.0" prefHeight="120.0" prefWidth="160.0" AnchorPane.topAnchor="1.0">
          <children>
             <AnchorPane fx:id="loginAnchorPane" prefHeight="120.0" prefWidth="115.0" styleClass="set-background-color">
                <children>
                   <Label alignment="CENTER" layoutX="16.0" layoutY="82.0" prefHeight="31.0" prefWidth="130.0" text="Logga in">
                      <styleClass>
-                        <String fx:value="border-loggedOut" />
+                        <String fx:value="text-border" />
                         <String fx:value="text-icon" />
                      </styleClass>
                   </Label>
@@ -62,24 +47,38 @@
                <children>
                   <ImageView fitHeight="45.0" fitWidth="60.0" layoutX="52.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@resources/profile_icon_logged_in.png" />
+                        <Image url="@resources/profile_loggedin_icon.png" />
                      </image>
                   </ImageView>
-                  <MenuButton fx:id="profileMenuButton" alignment="CENTER" layoutX="14.0" layoutY="82.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="130.0" text="Ditt konto">
-                    <items>
-                      <MenuItem mnemonicParsing="false" text="Användaruppgifter" />
-                      <MenuItem mnemonicParsing="false" text="Orderhistorik" />
+                  <MenuButton fx:id="profileMenuButton" alignment="CENTER" layoutX="14.0" layoutY="82.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="130.0" text="Ditt konto" textFill="WHITE">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="Användaruppgifter" />
+                        <MenuItem mnemonicParsing="false" text="Orderhistorik" />
                         <MenuItem mnemonicParsing="false" text="Favoriter" />
                         <MenuItem mnemonicParsing="false" text="Logga ut" />
-                    </items>
+                     </items>
                      <styleClass>
                         <String fx:value="text-icon" />
-                        <String fx:value="border-loggedIn" />
+                        <String fx:value="menu-item" />
                      </styleClass>
                   </MenuButton>
                </children>
             </AnchorPane>
          </children>
       </StackPane>
+      <AnchorPane layoutX="14.0" layoutY="11.0" prefHeight="85.0" prefWidth="233.0" styleClass="border-logo">
+         <children>
+            <Label layoutX="112.0" layoutY="21.0" prefHeight="58.0" prefWidth="136.0" styleClass="text-logo" text="IMat" />
+            <ImageView fitHeight="90.0" fitWidth="94.0" layoutX="6.0" layoutY="5.0" pickOnBounds="true">
+               <image>
+                  <Image url="@resources/iMat_logo.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
    </children>
+   <styleClass>
+      <String fx:value="set-background-color" />
+      <String fx:value="set-text-color-white" />
+   </styleClass>
 </AnchorPane>
