--- a/iMatMini/src/iMat/iMatMini.fxml
+++ b/iMatMini/src/iMat/iMatMini.fxml
@@ -18,7 +18,7 @@
          <children>
             <Button layoutX="533.0" layoutY="203.0" mnemonicParsing="false" onAction="#loadWizard" text="Open wizard" />
          </children></AnchorPane>
-      <AnchorPane fx:id="hd" layoutX="-1.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="143.0" prefWidth="1116.0" styleClass="set-background-color" stylesheets="@header.css">
+      <AnchorPane fx:id="hd" layoutX="-1.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="143.0" prefWidth="1116.0" styleClass="set-background-color" stylesheets="@css/header.css">
          <children>
             <ImageView fitHeight="114.0" fitWidth="202.0" layoutX="14.0" layoutY="4.0" pickOnBounds="true">
                <image>
