--- a/iMatMini/src/iMat/productItem.fxml
+++ b/iMatMini/src/iMat/productItem.fxml
@@ -14,7 +14,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="290.0" prefWidth="188.0" stylesheets="@css/productItem.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label fx:id="productNameLabel" alignment="TOP_LEFT" layoutX="25.0" layoutY="152.0" prefHeight="34.0" prefWidth="148.0" styleClass="text-product-title" text="Produkt namn" wrapText="true" />
-      <Label fx:id="priceLabel" layoutX="25.0" layoutY="186.0" prefHeight="17.0" prefWidth="119.0" styleClass="text-normal" text="xx kr" />
+      <Label fx:id="priceLabel" layoutX="25.0" layoutY="186.0" prefHeight="19.0" prefWidth="61.0" styleClass="text-normal" text="xx kr" />
       <Label fx:id="otherInfoLabel" alignment="TOP_LEFT" layoutX="25.0" layoutY="209.0" prefHeight="34.0" prefWidth="148.0" styleClass="text-normal" text="Övrig info" wrapText="true" />
       <StackPane layoutX="7.0" layoutY="238.0" prefHeight="48.0" prefWidth="174.0" styleClass="whiteGreyBackground">
          <children>
@@ -46,16 +46,17 @@
       </StackPane>
       <AnchorPane layoutX="10.0" layoutY="8.0" prefHeight="130.0" prefWidth="167.0">
          <children>
-            <ImageView fx:id="productImageView" fitHeight="108.0" fitWidth="119.0" layoutX="30.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="productImageView" fitHeight="122.0" fitWidth="126.0" layoutX="37.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@resources/empty_image.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="34.0" fitWidth="24.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="34.0" fitWidth="35.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@resources/star_icon.png" />
                </image>
             </ImageView>
+            <ImageView fx:id="ecoFriendlyImageView" fitHeight="34.0" fitWidth="35.0" layoutX="-1.0" layoutY="34.0" pickOnBounds="true" />
          </children>
          <styleClass>
             <String fx:value="whiteBackGround" />
